Bug 1836805: test(webgpu): use explicit passing test case sections some CTS cases r=webgpu-reviewers,nical
Not every diff algorithm renders this as pure additions, but that's what
this change is! I recommend using the `patience` algorithm, if you have
it available to you. That way, it's easy to search for `^-` via regular
expressions, and prove it to yourself. 🙂

Differential Revision: https://phabricator.services.mozilla.com/D186577

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/11/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/11/cts.https.html.ini
@@ -243,6 +243,172 @@
     expected:
       if os == "win": FAIL
 
+  [:format="astc-6x5-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-6x5-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-6x5-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-6x6-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-6x6-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-6x6-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-6x6-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-6x6-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-6x6-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-6x6-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-6x6-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-8x5-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-8x5-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-8x5-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-8x5-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-8x5-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-8x5-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-8x5-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-8x5-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-8x6-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-8x6-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-8x6-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-8x6-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-8x6-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-8x6-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-8x6-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-8x6-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-8x8-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-8x8-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-8x8-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-8x8-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-8x8-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-8x8-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-8x8-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-8x8-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-10x5-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-10x5-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-10x5-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-10x5-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-10x5-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-10x5-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-10x5-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-10x5-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-10x6-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-10x6-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-10x6-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-10x6-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-10x6-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-10x6-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-10x6-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-10x6-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-10x8-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-10x8-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-10x8-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-10x8-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-10x8-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-10x8-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-10x8-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-10x8-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-10x10-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-10x10-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-10x10-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-10x10-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-10x10-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-10x10-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-10x10-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-10x10-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-12x10-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-12x10-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-12x10-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-12x10-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-12x10-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-12x10-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-12x10-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-12x10-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-12x12-unorm";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-12x12-unorm";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-12x12-unorm";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-12x12-unorm";canvasType="offscreen";enable_required_feature=false]
+
+  [:format="astc-12x12-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
+
+  [:format="astc-12x12-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
+
+  [:format="astc-12x12-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
+
+  [:format="astc-12x12-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
+
 
 [cts.https.html?q=webgpu:api,validation,compute_pipeline:overrides,workgroup_size,limits:*]
   [:isAsync=true;type="u32"]
@@ -617,6 +783,184 @@
 
 
 [cts.https.html?q=webgpu:api,validation,capability_checks,features,texture_formats:canvas_configuration_view_formats:*]
+  [:viewFormats=["astc-6x5-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-6x5-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-6x5-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-6x5-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-6x5-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-6x6-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-6x6-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-6x6-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-6x6-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-6x6-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-6x6-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-6x6-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-6x6-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x5-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x5-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x5-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x5-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x5-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x5-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x5-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x5-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x6-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x6-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x6-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x6-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x6-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x6-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x6-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x6-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x8-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x8-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x8-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x8-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x8-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x8-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-8x8-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-8x8-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x5-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x5-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x5-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x5-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x5-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x5-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x5-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x5-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x6-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x6-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x6-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x6-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x6-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x6-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x6-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x6-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x8-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x8-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x8-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x8-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x8-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x8-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x8-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x8-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x10-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x10-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x10-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x10-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x10-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x10-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-10x10-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-10x10-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-12x10-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-12x10-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-12x10-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-12x10-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-12x10-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-12x10-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-12x10-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-12x10-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-12x12-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-12x12-unorm"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-12x12-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-12x12-unorm"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-12x12-unorm-srgb"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-12x12-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
+
+  [:viewFormats=["astc-12x12-unorm-srgb"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["astc-12x12-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
+
+  [:viewFormats=["bgra8unorm","bc1-rgba-unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["bgra8unorm","bc1-rgba-unorm"\];canvasType="offscreen";enable_required_feature=true]
+
+  [:viewFormats=["bc1-rgba-unorm","bgra8unorm"\];canvasType="onscreen";enable_required_feature=true]
+
+  [:viewFormats=["bc1-rgba-unorm","bgra8unorm"\];canvasType="offscreen";enable_required_feature=true]
+
   [:viewFormats=["depth32float-stencil8"\];canvasType="onscreen";enable_required_feature=false]
     expected:
       if os == "win": FAIL
