--- a/testing/web-platform/mozilla/meta/webgpu/chunked/41/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/41/cts.https.html.ini
@@ -120,6 +120,8 @@
   [:inputSource="uniform";vectorize=4]
     expected: FAIL
 
+  [:inputSource="storage_r";vectorize="_undef_"]
+
   [:inputSource="storage_r";vectorize=2]
     expected: FAIL
 
@@ -128,6 +130,8 @@
 
   [:inputSource="storage_r";vectorize=4]
     expected: FAIL
+
+  [:inputSource="storage_rw";vectorize="_undef_"]
 
   [:inputSource="storage_rw";vectorize=2]
     expected: FAIL
