--- a/testing/web-platform/mozilla/meta/webgpu/chunked/50/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/50/cts.https.html.ini
@@ -293,6 +293,38 @@
   [:use_struct=false;type="sampler_comparison"]
     expected: FAIL
 
+  [:use_struct=false;type="vec3f"]
+
+  [:use_struct=false;type="vec3i"]
+
+  [:use_struct=false;type="vec3u"]
+
+  [:use_struct=false;type="vec4h"]
+
+  [:use_struct=false;type="vec4f"]
+
+  [:use_struct=false;type="vec4i"]
+
+  [:use_struct=false;type="vec4u"]
+
+  [:use_struct=false;type="mat2x2h"]
+
+  [:use_struct=false;type="mat2x3h"]
+
+  [:use_struct=false;type="mat2x4h"]
+
+  [:use_struct=false;type="mat3x2h"]
+
+  [:use_struct=false;type="mat3x3h"]
+
+  [:use_struct=false;type="mat3x4h"]
+
+  [:use_struct=false;type="mat4x2h"]
+
+  [:use_struct=false;type="mat4x3h"]
+
+  [:use_struct=false;type="mat4x4h"]
+
 
 [cts.https.html?q=webgpu:web_platform,canvas,configure:usage:*]
   [:canvasType="onscreen"]
@@ -892,6 +924,82 @@
     expected:
       if os == "mac": PASS
       if os == "win": FAIL
+
+  [:canvasType="offscreen";format="etc2-rgb8unorm"]
+
+  [:canvasType="offscreen";format="etc2-rgb8unorm-srgb"]
+
+  [:canvasType="offscreen";format="etc2-rgb8a1unorm"]
+
+  [:canvasType="offscreen";format="etc2-rgb8a1unorm-srgb"]
+
+  [:canvasType="offscreen";format="etc2-rgba8unorm"]
+
+  [:canvasType="offscreen";format="etc2-rgba8unorm-srgb"]
+
+  [:canvasType="offscreen";format="eac-r11unorm"]
+
+  [:canvasType="offscreen";format="eac-r11snorm"]
+
+  [:canvasType="offscreen";format="eac-rg11unorm"]
+
+  [:canvasType="offscreen";format="eac-rg11snorm"]
+
+  [:canvasType="offscreen";format="astc-4x4-unorm"]
+
+  [:canvasType="offscreen";format="astc-4x4-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-5x4-unorm"]
+
+  [:canvasType="offscreen";format="astc-5x4-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-5x5-unorm"]
+
+  [:canvasType="offscreen";format="astc-5x5-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-6x5-unorm"]
+
+  [:canvasType="offscreen";format="astc-6x5-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-6x6-unorm"]
+
+  [:canvasType="offscreen";format="astc-6x6-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-8x5-unorm"]
+
+  [:canvasType="offscreen";format="astc-8x5-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-8x6-unorm"]
+
+  [:canvasType="offscreen";format="astc-8x6-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-8x8-unorm"]
+
+  [:canvasType="offscreen";format="astc-8x8-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-10x5-unorm"]
+
+  [:canvasType="offscreen";format="astc-10x5-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-10x6-unorm"]
+
+  [:canvasType="offscreen";format="astc-10x6-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-10x8-unorm"]
+
+  [:canvasType="offscreen";format="astc-10x8-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-10x10-unorm"]
+
+  [:canvasType="offscreen";format="astc-10x10-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-12x10-unorm"]
+
+  [:canvasType="offscreen";format="astc-12x10-unorm-srgb"]
+
+  [:canvasType="offscreen";format="astc-12x12-unorm"]
+
+  [:canvasType="offscreen";format="astc-12x12-unorm-srgb"]
 
 
 [cts.https.html?q=webgpu:util,texture,texture_ok:norm:*]
