--- a/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
@@ -402,6 +402,45 @@
 
 
 [cts.https.html?q=webgpu:api,operation,rendering,depth_clip_clamp:depth_test_input_clamped:*]
+  [:format="depth32float";unclippedDepth=false;multisampled=false]
+
+  [:format="depth32float";unclippedDepth=false;multisampled=true]
+
+  [:format="depth32float";unclippedDepth=true;multisampled=false]
+
+  [:format="depth32float";unclippedDepth=true;multisampled=true]
+
+  [:format="depth16unorm";unclippedDepth=false;multisampled=false]
+
+  [:format="depth16unorm";unclippedDepth=false;multisampled=true]
+
+  [:format="depth16unorm";unclippedDepth=true;multisampled=false]
+
+  [:format="depth16unorm";unclippedDepth=true;multisampled=true]
+
+  [:format="depth24plus";unclippedDepth=false;multisampled=false]
+
+  [:format="depth24plus";unclippedDepth=false;multisampled=true]
+
+  [:format="depth24plus";unclippedDepth=true;multisampled=false]
+
+  [:format="depth24plus";unclippedDepth=true;multisampled=true]
+
+  [:format="depth24plus-stencil8";unclippedDepth=false;multisampled=false]
+
+  [:format="depth24plus-stencil8";unclippedDepth=false;multisampled=true]
+
+  [:format="depth24plus-stencil8";unclippedDepth=true;multisampled=false]
+
+  [:format="depth24plus-stencil8";unclippedDepth=true;multisampled=true]
+
+  [:format="depth32float-stencil8";unclippedDepth=false;multisampled=false]
+
+  [:format="depth32float-stencil8";unclippedDepth=false;multisampled=true]
+
+  [:format="depth32float-stencil8";unclippedDepth=true;multisampled=false]
+
+  [:format="depth32float-stencil8";unclippedDepth=true;multisampled=true]
 
 [cts.https.html?q=webgpu:api,operation,rendering,depth:depth_test_fail:*]
   [:secondDepth=1;lastDepth=2]
