--- a/testing/web-platform/mozilla/meta/webgpu/chunked/9/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/9/cts.https.html.ini
@@ -24,6 +24,133 @@
   disabled: true
 
 [cts.https.html?q=webgpu:api,validation,buffer,create:usage:*]
+  [:usage1=32;usage2=128]
+
+  [:usage1=32;usage2=256]
+
+  [:usage1=32;usage2=512]
+
+  [:usage1=32;usage2=32768]
+
+  [:usage1=64;usage2=0]
+
+  [:usage1=64;usage2=1]
+
+  [:usage1=64;usage2=2]
+
+  [:usage1=64;usage2=4]
+
+  [:usage1=64;usage2=8]
+
+  [:usage1=64;usage2=16]
+
+  [:usage1=64;usage2=32]
+
+  [:usage1=64;usage2=64]
+
+  [:usage1=64;usage2=128]
+
+  [:usage1=64;usage2=256]
+
+  [:usage1=64;usage2=512]
+
+  [:usage1=64;usage2=32768]
+
+  [:usage1=128;usage2=0]
+
+  [:usage1=128;usage2=1]
+
+  [:usage1=128;usage2=2]
+
+  [:usage1=128;usage2=4]
+
+  [:usage1=128;usage2=8]
+
+  [:usage1=128;usage2=16]
+
+  [:usage1=128;usage2=32]
+
+  [:usage1=128;usage2=64]
+
+  [:usage1=128;usage2=128]
+
+  [:usage1=128;usage2=256]
+
+  [:usage1=128;usage2=512]
+
+  [:usage1=128;usage2=32768]
+
+  [:usage1=256;usage2=0]
+
+  [:usage1=256;usage2=1]
+
+  [:usage1=256;usage2=2]
+
+  [:usage1=256;usage2=4]
+
+  [:usage1=256;usage2=8]
+
+  [:usage1=256;usage2=16]
+
+  [:usage1=256;usage2=32]
+
+  [:usage1=256;usage2=64]
+
+  [:usage1=256;usage2=128]
+
+  [:usage1=256;usage2=256]
+
+  [:usage1=256;usage2=512]
+
+  [:usage1=256;usage2=32768]
+
+  [:usage1=512;usage2=0]
+
+  [:usage1=512;usage2=1]
+
+  [:usage1=512;usage2=2]
+
+  [:usage1=512;usage2=4]
+
+  [:usage1=512;usage2=8]
+
+  [:usage1=512;usage2=16]
+
+  [:usage1=512;usage2=32]
+
+  [:usage1=512;usage2=64]
+
+  [:usage1=512;usage2=128]
+
+  [:usage1=512;usage2=256]
+
+  [:usage1=512;usage2=512]
+
+  [:usage1=512;usage2=32768]
+
+  [:usage1=32768;usage2=0]
+
+  [:usage1=32768;usage2=1]
+
+  [:usage1=32768;usage2=2]
+
+  [:usage1=32768;usage2=4]
+
+  [:usage1=32768;usage2=8]
+
+  [:usage1=32768;usage2=16]
+
+  [:usage1=32768;usage2=32]
+
+  [:usage1=32768;usage2=64]
+
+  [:usage1=32768;usage2=128]
+
+  [:usage1=32768;usage2=256]
+
+  [:usage1=32768;usage2=512]
+
+  [:usage1=32768;usage2=32768]
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,state,mappingPending:*]
   # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
@@ -59,6 +186,15 @@
 [cts.https.html?q=webgpu:api,validation,buffer,destroy:twice:*]
 
 [cts.https.html?q=webgpu:api,operation,vertex_state,index_format:primitive_restart:*]
+  [:indexFormat="uint16";primitiveTopology="triangle-list"]
+
+  [:indexFormat="uint16";primitiveTopology="triangle-strip"]
+
+  [:indexFormat="uint32";primitiveTopology="point-list"]
+
+  [:indexFormat="uint32";primitiveTopology="triangle-list"]
+
+  [:indexFormat="uint32";primitiveTopology="triangle-strip"]
 
 [cts.https.html?q=webgpu:api,validation,buffer,destroy:all_usages:*]
 
